--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,3 +4,71 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/*HEADER*/
+.header{
+    width: 100%;
+    height: 70px;
+    background-color: greenyellow;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-section{
+    width: 25%;
+    height: 70px;
+}
+
+.first{
+    background-color: blue;
+}
+
+.second{
+    background-color: brown;
+}
+
+.jumbotron-container{
+    width: 100%;
+    min-height: 600px;
+    background-color: rgb(201, 252, 252);
+}
+
+.jumbotron{
+    width: 70%;
+    height: 600px;
+    margin: auto;
+    background-color: rgb(142, 75, 75);
+}
+
+.first-main-section{
+    width: 70%;
+    min-height: 1200px;
+    margin: auto;
+    background-color: rgb(156, 82, 225);
+}
+
+.second-main-section{
+    width: 100%;
+    min-height: 900px;
+    background-color: aqua;
+}
+
+.third-main-section{
+    width: 60%;
+    min-height: 700px;
+    margin: auto;
+    background-color: coral;
+}
+
+.footer{
+    width: 100%;
+    min-height: 550px;
+    background-color: black;
+}
+
+.footer-container{
+    width: 70%;
+    min-height: 550px;
+    margin: auto;
+    background-color: beige; 
+}
