--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,10 +84,8 @@ img{
     padding-top: 50px; 
 }
 
-i{
-    color: rgb(17, 17, 17);
-    margin-bottom: 2px;
-   
+.arrow{
+    margin-top: 60px;
 }
 
 .jumbotron-image{
@@ -100,11 +98,93 @@ i{
     margin-top: 70px;
 }
 
+.main-title{
+    width: 70%;
+    height: 160px;
+    margin: auto;
+}
+
+.h2{
+    padding-top: 50px;
+}
+
+.radio-button{
+    padding-top:40px
+}
+
+
+
 .first-main-section{
     width: 70%;
     min-height: 1200px;
     margin: auto;
     background-color: rgb(156, 82, 225);
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.vertical-column{
+    width: calc(100% / 3 - 40px);
+    min-height: 1200px;
+}
+
+.row{
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border: 1px solid black;
+    line-height:50px ;
+    text-align: center;
+}
+
+.h3-column{
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
+.h4-column{
+    margin-left: 30px;
+    margin-top: 40px;  
+}
+
+.folder{
+    margin-left: 30px;
+    margin-top: 25px;  
+}
+
+.begin1{
+    margin-left: 30px; 
+    margin-top: 85px;
+}
+
+.begin2{
+    margin-left: 30px; 
+    margin-top: 70px; 
+}
+
+
+
+.begin3{
+    margin-left: 30px;
+    margin-top: 55px;
+}
+
+.purchase-link{
+    margin-left: 30px;
+    margin-top: 45px;
+}
+
+.first{
+    background-color: coral;
+}
+
+.second{
+    background-color: aquamarine;
+}
+
+.third{
+    background-color: rgb(205, 33, 33);
 }
 
 .second-main-section{
