--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,9 +116,8 @@ img{
 
 .first-main-section{
     width: 70%;
-    min-height: 1200px;
+    min-height: 1000px;
     margin: auto;
-    background-color: rgb(156, 82, 225);
     display: flex;
     justify-content: space-between;
 }
@@ -126,7 +125,8 @@ img{
 
 .vertical-column{
     width: calc(100% / 3 - 40px);
-    min-height: 1200px;
+    min-height: 1000px;
+    border: 1px solid black;
 }
 
 .row{
@@ -175,60 +175,133 @@ img{
     margin-top: 45px;
 }
 
-.first{
-    background-color: coral;
+.description-title{
+    margin-left: 30px;
+    margin-top: 150px;
 }
 
-.second{
-    background-color: aquamarine;
+.points{
+    margin-left: 5px;
+    margin-top: 30px; 
 }
 
-.third{
-    background-color: rgb(205, 33, 33);
+.check{
+    color: rgb(49, 49, 212);
+}
+
+.second-main-section-title{
+    width: 70%;
+    min-height: 60px;
+    margin-top: 40px;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 60px;
+    vertical-align: middle;
+    text-align: center;
+    border: 1px solid black; 
 }
 
 .second-main-section{
     width: 70%;
-    min-height: 400px;
-    margin: 40px auto;
-    background-color: darkgoldenrod;
+    min-height: 300px;
+    margin: auto;
+    border: 1px solid black;
+    display: flex;
+}
+
+.second-main-section-text{
+    width: 70%;
+    min-height: 300px;
+}
+
+.h3-section-text{
+    margin-left: 30px;
+    margin-top: 45px;
+}
+
+.h4-section-text{
+    margin-left: 30px;
+    margin-top: 40px;
+}
+
+.p-section-text{
+    margin-left: 30px;
+    margin-top: 80px;
+}
+
+.second-main-section-button{
+    width: 30%;
+    min-height: 300px;
+}
+
+.second-main-button{
+    margin-left: 60px;
+    margin-top: 35px;
+}
+
+.contact-center{
+    text-decoration: none;
+    padding: 15px 30px;
+    background-color: rgb(61, 61, 169);
+    color: white;  
 }
 
 .third-main-section{
     width: 70%;
     min-height: 600px;
     margin: 40px auto;
-    background-color: rgb(125, 14, 14);
     display: flex;
 }
 
 .third-section-image{
     width: 65%;
     min-height: 600px;
-    background-color: grey;
 }
 
 .third-section-text{
     width: 35%;
     min-height: 600px;
-    background-color: rgb(212, 61, 212);
+}
+
+.text-third-block-title{
+    margin-left: 30px;
+    margin-top: 40px;
+}
+
+.text-third-block-paragraph{
+    margin-top: 50px;
+    margin-left: 30px;
+}
+
+.button-link-third-block{
+    margin-left: 30px;
+    margin-top: 60px;
+}
+
+.link-third-block{
+    padding: 10px 20px;
+    text-decoration: none;
+    color: rgb(23, 23, 23);
+    background-color: white;
+    border: 1px solid rgb(23, 23, 23);
 }
 
 .fourth-main-section{
     width: 70%;
     height: 100px;
+    line-height: 100px;
+    vertical-align: middle;
     margin-top: 40px;
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
-    background-color: aqua;
 }
 
 .fifth-main-section{
     width: 70%;
     min-height: 600px;
     margin: auto;
-    background-color: forestgreen;
     display: flex;
     justify-content: space-between;
 }
@@ -236,19 +309,29 @@ img{
 .fifth-column-left{
     width: calc(100% / 3 - 20px);
     min-height: 600px;
-    background-color: rgb(152, 69, 230);
 }
 
 .fifth-column-center{
     width: calc(100% / 3 - 20px);
-    min-height: 600px;
-    background-color: aquamarine;  
+    min-height: 600px; 
 }
 
 .fifth-column-right{
     width: calc(100% / 3 - 20px);
-    min-height: 600px;
-    background-color: cornflowerblue; 
+    min-height: 600px; 
+}
+
+.sub-section-column{
+    width: 100%;
+    height: 50%;
+}
+
+.text-of-fifth-column{
+    margin-top: 20px;
+}
+
+.ph-of-fifth-column{
+    margin-top: 50px;
 }
 
 .sixth-main-section{
@@ -258,9 +341,8 @@ img{
     margin-bottom: 90px;
     margin-left: auto;
     margin-right: auto; 
-    background-color: darkkhaki;
-   display: flex; 
-   justify-content: space-between;
+    display: flex; 
+    justify-content: space-between;
 }
 
 .seventh-main-section{
