--- a/CSS/style.css
+++ b/CSS/style.css
@@ -349,13 +349,34 @@ img{
     width: 70%;
     min-height: 350px;
     margin:auto;
-    background-color: dodgerblue;
+}
+
+.seventh-main-title{
+    padding-top: 70px;
+}
+
+.seventh-main-link{
+    margin-top: 90px;
+}
+
+.central-logo{
+    margin-top: 40px;
+    margin-left: 40px;
+}
+
+.paragraph-designit{
+    margin-left: 40px;
+    margin-top: 60px
+}
+
+.heading-designit{
+    margin-left: 40px;
+    margin-top: 60px 
 }
 
 .eighth-main-section{
     width: 100%;
-    height: 600px;
-    background-color: aqua;
+    
     display: flex;
 }
 
@@ -366,16 +387,28 @@ img{
 
 .square{
     width: calc(100% / 2);
-    height: calc(100 / 2);
+    aspect-ratio: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.square-icons{
+    width: 140px;
+    color: white;
+}
+
+.square-icons2{
+    width: 100px;
 }
 
 .division{
     width: calc(100% / 3);
-    height: 600px;
+    aspect-ratio: 1;
 }
 
 .center{
-    background-color: darkgoldenrod;
+    background-color: rgb(234, 234, 234);
 }
 
 .right{
@@ -386,21 +419,48 @@ img{
 .ninth-main-section{
     width: 100%;
     min-height: 300px;
-    background-color: chartreuse; 
+    background-color: rgb(201, 252, 252); 
 }
 
 .ninth-sub-section{
     width: 70%;
     min-height: 300px;
     margin: auto;
-    background-color: bisque;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.ninth-h2-title{
+    color: brown;
+}
+
+.ninth-button{
+    padding: 10px 25px;
+    text-decoration: none;
+    color: rgb(27, 27, 27);
+    background-color: white;
 }
 
 .tithe-main-section{
     width: 60%;
     min-height: 700px;
     margin: auto;
-    background-color: coral;
+}
+
+.tithe-main-title{
+    padding-top: 100px;
+}
+
+.border{
+    width: 100%;
+    height: 2px;
+    background-color: lightgray;
+    margin-top: 30px;
+}
+
+.faq{
+    margin-top: 40px;
 }
 
 .footer{
